# Device-Monitoring

./: .gitignore  README.md
client/: CMakeLists.txt  client.cpp  client.h  client.pro  main.cpp
server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.pro
